kustomize/arr-stack/radarr/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  labels:
    app: radarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "true"
        sidecar.opentelemetry.io/inject: "true"
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nardine
      containers:
      - name: radarr
        image: ghcr.io/hotio/radarr:latest
        ports:
        - name: radarr
          containerPort: 7878
        livenessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
        - name: radarr
          mountPath: /config
        - name: movies
          mountPath: /data/videos/movies
        - name: p2p
          mountPath: /data/torrent/complete/movies
        - name: usenet
          mountPath: /data/usenet/complete/movies
     #   - name: betarr-script
     #     mountPath: /etc/cont-init.d/99-betarr-setup.sh
     #     subPath: install-dependencies.sh
      volumes:
      - name: radarr
        hostPath:
          path: /k8s/radarr
          type: Directory
      - name: movies
        hostPath:
          path: /data/videos/movies
          type: Directory
      - name: p2p
        hostPath:
          path: /data/torrent/complete/movies
          type: Directory
      - name: usenet
        hostPath:
          path: /data/usenet/complete/movies
          type: Directory
    #  - name: betarr-script
    #    configMap:
    #      name: betarr
    #      defaultMode: 0755
