kustomize/arr-stack/radarr/radarr-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  labels:
    app: radarr
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: "true"
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "true"
        sidecar.opentelemetry.io/inject: "true"
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nardine
      containers:
      - name: radarr
        image: ghcr.io/hotio/radarr:latest
        resources:
            limits:
              memory: 2Gi
              cpu: 2000m
            requests:
              memory: 512Mi
              cpu: 500m
        ports:
        - name: radarr
          containerPort: 7878
        livenessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
        - name: radarr
          mountPath: /config
        - name: movies
          mountPath: /data/videos/movies
        - name: p2p
          mountPath: /data/p2p/complete/movies
        - name: cold
          mountPath: /data/p2p/cold
        - name: usenet
          mountPath: /data/usenet/complete/movies
      volumes:
      - name: radarr
        hostPath:
          path: /k8s/radarr
          type: Directory
      - name: movies
        hostPath:
          path: /data/videos/movies
          type: Directory
      - name: p2p
        hostPath:
          path: /data/p2p/complete/movies
          type: Directory
      - name: cold
        hostPath:
          path: /data/p2p/cold
          type: Directory
      - name: usenet
        hostPath:
          path: /data/usenet/complete/movies
          type: Directory
