kustomize/arr-stack/radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.52
  selector:
    app: radarr
  type: LoadBalancer
  ports:
    - port: 7878
      targetPort: radarr
