kustomize/arr-stack/radarr/radarr-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`movies-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
